--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["ThanhNhan140903 <phanthithanhnhan1409@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.10,<4.0"
 pandas = "1.5.2"
 black = "^22.1.0"
 fastapi = "^0.115.8"
 psutil = "^7.0.0"
 implicit = "^0.7.2"
+uvicorn = "^0.34.3"
 
 [tool.black]
 line-length = 79
